gccida/c3/remove_address_replacements
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_address_replacements/src/reload.c:2082:12: error: expected expression
*( _OWORD *)( ( char *)&replacements[0].where + 3 * v7) = *( _OWORD *)&v4->where; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_address_replacements/src/reload.c:2082:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&replacements[0].where + 3 * v7) = *( _OWORD *)&v4->where; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_address_replacements/src/reload.c:2082:70: error: expected expression
*( _OWORD *)( ( char *)&replacements[0].where + 3 * v7) = *( _OWORD *)&v4->where; 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_address_replacements/src/reload.c:2082:62: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&replacements[0].where + 3 * v7) = *( _OWORD *)&v4->where; 
                                                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_address_replacements/src/obj/reload.o] Error 1
